2010-04-22 Erwin Waterlander <waterlan@xs4all.nl>
	* Support compilation in DOSBox (8.3 file names where needed).

2010-04-14 Erwin Waterlander <waterlan@xs4all.nl>
	* Fixed compilation on Darwin OS. Thanks to Marc Gianzero.

2010-04-03 Erwin Waterlander <waterlan@xs4all.nl>
	* version 5.1

2010-03-22 Erwin Waterlander <waterlan@xs4all.nl>
	* Man page generation from Perl POD file.
	  Thanks to Jari Aalto <jari.aalto@cante.net>
	* Merge dos2unix and unix2dos man pages.

2010-03-17 Erwin Waterlander <waterlan@xs4all.nl>
	* Add localization information to manual.

2010-03-16 Rugxulo <rugxulo@gmail.com>
	* Added Esperanto translation.

2010-03-13 Erwin Waterlander <waterlan@xs4all.nl>
	* DJGPP, dos32bit: Create 'stubs' for mac2unix and unix2mac.
	  See also http://www.delorie.com/djgpp/v2faq/faq22_5.html
	  Thanks to Rugxulo <rugxulo@gmail.com>

2010-03-11 Erwin Waterlander <waterlan@xs4all.nl>
	* Allow to set options in stdio mode.
	* dos2unix: bugfix MAC mode: Don't change DOS line endings.
	* Display help if a wrong option was used.

2010-03-04 Erwin Waterlander <waterlan@xs4all.nl>
	* Port to 16 bit DOS, using OpenWatcom.

2010-03-03 Erwin Waterlander <waterlan@xs4all.nl>
	* Port to 16 bit DOS, using Borland C.

2010-02-16 Erwin Waterlander <waterlan@xs4all.nl>
	* version 5.0

2010-02-15 Erwin Waterlander <waterlan@xs4all.nl>
	* unix2dos: Fix problem of reading Mac files.
	* unix2dos: Added command 'unix2mac'.
	* unix2dos: Can use DOS2UNIX_LOCALEDIR i.s.o. UNIX2DOS_LOCALEDIR.
	* dos2unix: 'mac2unix' command can have a prefix.
	* Makefile: mac2unix and unix2mac are installed as soft links.

2010-02-13 Erwin Waterlander <waterlan@xs4all.nl>
	* Bundled dos2unix and unix2dos in one package.
	* dos2unix/unix2dos : Cleanup messages and manual.
	* dos2unix: Option -l --newline also works in MAC mode.
	* unix2dos: Added option -l, --newline.
	* unix2dos: Added MAC mode. Convert Unix line endings
	  to Mac line endings.

2010-02-10 Erwin Waterlander <waterlan@xs4all.nl>