@@ -11,11 +11,6 @@ help:
 # Documentation creation only works properly on Cygwin or
 # a modern Linux distribution.
 
-# .po language files can be older than the .pot files, but
-# still be up-to-date. 'msgmerge' will be run by 'make', but
-# the .po files are not updated by msgmerge. For users that
-# don't have 'gettext' installed we do a few file touches
-# so that make doesn't run the gettext tools.
 
 RELEASE_DIR_DOS2UNIX = dos2unix-$(DOS2UNIX_VERSION)
 
@@ -23,14 +18,13 @@ RELEASE_DIR_DOS2UNIX = dos2unix-$(DOS2UNIX_VERSION)
 dist:
 	rm -rf ../${RELEASE_DIR_DOS2UNIX}
 	svn export https://dos2unix.svn.sourceforge.net/svnroot/dos2unix/trunk/dos2unix ../${RELEASE_DIR_DOS2UNIX}
-	cd ../${RELEASE_DIR_DOS2UNIX} ; $(MAKE) mofiles docfiles
-	cd ../${RELEASE_DIR_DOS2UNIX} ; rm -f pod2*.tmp
-	sleep 2
-	cd ../${RELEASE_DIR_DOS2UNIX} ; touch po/*/*.pot
-	sleep 2
-	cd ../${RELEASE_DIR_DOS2UNIX} ; touch po/*/*.po
-	sleep 2
-	cd ../${RELEASE_DIR_DOS2UNIX} ; touch po/*/*.mo
+	# Include doc files, to make it easier to build wcd.
+	cd ../${RELEASE_DIR_DOS2UNIX} ; $(MAKE) docfiles
+	# Make sure .po files are up to date.
+	cd ../${RELEASE_DIR_DOS2UNIX} ; $(MAKE) merge
+	# cleanup.
+	cd ../${RELEASE_DIR_DOS2UNIX} ; $(MAKE) clean
+	# Create the package.
 	cd .. ; tar cvzf ${RELEASE_DIR_DOS2UNIX}.tar.gz ${RELEASE_DIR_DOS2UNIX}
 
 # Target: tag - Create a tag copy of trunk
